--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
-hello folks... 
+Hello folks... 
+This repo contains files of the project  'Remote Diagnosis System'. 
+In this project we intend to collect patient data based on diff params and transfer the same w/ the help of a wireless tech.
+
